--- a/template.html
+++ b/template.html
@@ -10,8 +10,10 @@ If you see yourself featured here, I would love to review your audiobook! Click 
 Clicking these helps support this site, so thank you if you do.</em></p>
 
 <h3 style="text-align: center;">New to Audible or Audiobooks in general? Welcome!</h3>
-<p style="text-align: center;"><iframe style="border: none;" src="//rcm-na.amazon-adsystem.com/e/cm?o=1&amp;p=288&amp;l=ur1&amp;category=audible&amp;banner=1MT86MHBPYDXGSS2DYG2&amp;f=ifr&amp;linkID=3dfc7ec36d2d2deb8f0013109ec0793c&amp;t=brsbobl0e-20&amp;tracking_id=brsbobl0e-20" width="320" height="50" frameborder="0" marginwidth="0" scrolling="no" data-mce-fragment="1"></iframe></p>
-<p style="text-align: center;"><a href="https://amzn.to/2KMfKDV">Get 2 FREE Audiobooks (instead of one) by clicking on the banner or here</a>.</p>
+<p style="text-align: center;"><a href="https://amzn.to/2NFDUpy">Try Audible Premium Plus and Get Up to Two Free Audiobooks</a></p>
+
+<h5 style="text-align: center;">Sign up for Audible Plus</h5>
+<h5 style="text-align: center;"><iframe style="border: none;" src="//rcm-na.amazon-adsystem.com/e/cm?o=1&amp;p=12&amp;l=ur1&amp;category=audibleplus&amp;banner=0MG2XKQ7PYPP84NBNFR2&amp;f=ifr&amp;lc=pf4&amp;linkID=aff581f8882c7be21bad4451039ed319&amp;t=briansbooks-20&amp;tracking_id=briansbooks-20" width="300" height="250" frameborder="0" marginwidth="0" scrolling="no"></iframe></h5>
 <p>
 {{#books}}
 <hr />
